--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@tsed/mongoose": "5.61.1",
     "@tsed/passport": "5.61.1",
     "@tsed/platform-express": "5.61.1",
+    "@types/bcryptjs": "^2.4.2",
     "@types/express-session": "^1.17.0",
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
     "ajv": "6.12.3",
+    "bcryptjs": "^2.4.3",
     "body-parser": "1.19.0",
     "compression": "1.7.4",
     "concurrently": "5.2.0",
